@@ -6,22 +6,22 @@
        url         = "http://www.monodevelop.com/"
        description = "Visual Designer for ASP.NET Web Forms."
 	   category    = "IDE extensions"
-       version     = "0.17.0">
+       version     = "0.18.0">
 	
 	<Runtime>
 		<Import assembly = "AspNetEdit.dll"/>
 	</Runtime>
 
 	<Dependencies>
-		<Addin id="Core" version="0.17.0"/>
-		<Addin id="Core.Gui" version="0.17.0"/>
-		<Addin id="Projects" version="0.17.0"/>
-		<Addin id="Projects.Gui" version="0.17.0"/>
-		<Addin id="Ide" version="0.17.0"/>
-		<Addin id="Deployment" version="0.17.0" />
-		<Addin id="SourceEditor" version="0.17.0"/>
-		<Addin id="AspNetAddIn" version="0.17.0" />
-		<Addin id="DesignerSupport" version="0.17.0" />
+		<Addin id="Core" version="0.18.0"/>
+		<Addin id="Core.Gui" version="0.18.0"/>
+		<Addin id="Projects" version="0.18.0"/>
+		<Addin id="Projects.Gui" version="0.18.0"/>
+		<Addin id="Ide" version="0.18.0"/>
+		<Addin id="Deployment" version="0.18.0" />
+		<Addin id="SourceEditor" version="0.18.0"/>
+		<Addin id="AspNetAddIn" version="0.18.0" />
+		<Addin id="DesignerSupport" version="0.18.0" />
 	</Dependencies>
 	
 	<Extension path = "/MonoDevelop/Ide/DisplayBindings">
