@@ -1,3 +1,7 @@
+2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* AspNetEdit.addin.xml: Bump add-in versions.
+
 2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* configure: Use bash to run the config scripts.
